<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GameThis</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="botao_tela_login">Login</string>
    <string name="botao_tela_inscricao">Inscreva-se</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_inscricao">Inscrição</string>
    <string name="title_activity_novo_jogo">Novo Jogo</string>
    <string name="title_activity_jogadores">Jogadores</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_atividades">Atividades</string>
    <string name="title_activity_pesquisar_usuario">Pesquisar Jogador</string>
    <string name="title_activity_cadastro_atividade">Cadastro de Atividade</string>
    <string name="title_activity_jogos_convidado"> Jogos como Convidado</string>
    <string name="title_activity_detalhes_jogo_convidado">Detalhes do Jogo</string>
    <string name="title_activity_meus_jogos">Meus Jogos</string>
    <string name="title_activity_jogos_gerenciados">Jogos Gerenciados</string>
    <string name="title_activity_detalhes_atividade_convidado">Detalhes da Atividade</string>
    <string name="title_activity_ranking">Ranking</string>

    <!-- Tela Novo Jogo -->
    <string name="texto_input_descricao_jogo">Descrição</string>
    <string name="texto_data_inicio">Data Início: </string>
    <string name="texto_data_termino">Data Término: </string>
    <string name="texto_botao_add_jogadores">+ Jogadores </string>
    <string name="texto_botao_add_atividades">+ Atividades </string>
    <string name="texto_botao_iniciar_jogo">Criar Jogo </string>

    <!-- Tela Pesquisar Jogador -->
    <string name="search_pesquisar_jogador">Pesquisar Usuário</string>
    <string name="search_hint_jogadores">Email do jogador</string>
    <string name="texto_jogadores_adicionados">Jogadores adicionados</string>
    <string name="ok_confirmar_lista_jogadores">OK!</string>

    <!-- Tela Inserir Atividades -->
    <string name="texto_input_descricao_atividade">Descrição</string>
    <string name="texto_pontos">Pontos:</string>
    <string name="texto_duracao_atividade">Duração:</string>
    <string name="texto_detalhe_duracao_atividade">dia(s)</string>
    <string name="botao_cadastrar_atividade">Cadastrar Atividade</string>
    <string name="texto_atividades_cadastradas">Atividades cadastradas</string>
    <string name="ok_confirmar_lista_atividades">OK!</string>
    <string name="texto_botao_add_nova_atividade">Nova Atividade</string>
    <string name="textoPontosAtividadeInfo">Pts.</string>
    <string name="textoDuracaoAtividadeInfo">Dur.</string>

    <!-- Tela Meus Jogos (tela principal) -->
    <string name="texto_botao_jogos_gerenciados">Jogos Gerenciados</string>
    <string name="texto_botao_jogos_convidados">Jogos como Convidado</string>

    <!-- Tela Jogos Gerenciados -->


    <!-- Tela Jogos Convidado -->
    <string name="textoPontosAtividadeConvidadoInfo">Pts.</string>
    <string name="textoDuracaoAtividadeConvidadoInfo">Dur.</string>
    
    <!-- Tela Ranking -->
    <string name="textoPosicaoRankingInfo">Pos.</string>
    <string name="textoPontuacaoRankingInfo">Pts.</string>
    <string name="textoLoginJogadorRankingInfo">Jogador</string>
     

</resources>