<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.recidev.gamethis.ui.CadastroAtividadeActivity" >

    <EditText
        android:id="@+id/input_descricao_atividade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/texto_input_descricao_atividade"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />
    
    <LinearLayout
         android:layout_width="246dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:orientation="horizontal" >

		     <TextView
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:text="@string/texto_pontos"
		         android:layout_marginTop="8dp"
		         android:textSize="15sp" />
		
		      <EditText
		          android:id="@+id/input_pontos_atividade"
		          android:layout_width="50dp"
		          android:layout_height="wrap_content"
		          android:layout_marginLeft="30dp"
		          android:focusable="false"
		          android:inputType="number" />
      </LinearLayout>
    
    <LinearLayout
         android:layout_width="246dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:orientation="horizontal" >

		     <TextView
		         android:layout_width="wrap_content"
		         android:layout_height="wrap_content"
		         android:text="@string/texto_duracao_atividade"
		         android:layout_marginTop="8dp"
		         android:textSize="15sp" />
		
		      <EditText
		          android:id="@+id/input_duracao_atividade"
		          android:layout_width="70dp"
		          android:layout_height="wrap_content"
		          android:layout_marginLeft="18dp"
		          android:inputType="number"
		          android:maxLength="4" />
      </LinearLayout>
      
    
    <Button
          android:id="@+id/botao_add_atividade"
          style="?android:textAppearanceSmall"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="35dp"
          android:text="@string/botao_cadastrar_atividade" />
    

</LinearLayout>
