<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.recidev.gamethis.ui.AtividadesActivity" >
    
    
    <Button
          android:id="@+id/botao_add_nova_atividade"
          style="?android:textAppearanceSmall"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="0dp"
          android:text="@string/texto_botao_add_nova_atividade" />
    

	<TextView 
                 android:id="@+id/textoListaJogadoresAdicionados"
                 android:layout_width="match_parent"
              	 android:layout_height="40dp"
              	 android:layout_marginTop="80dp"
              	 android:gravity="left"
              	 android:text="@string/texto_atividades_cadastradas"
              	 android:textSize="15sp"
              	 android:textAppearance="?android:attr/textAppearanceListItem"
                 />  
                 
     <Button
         android:id="@+id/botao_confirmar_lista_atividades"
         style="?android:textAppearanceSmall"
         android:layout_width="50dp"
         android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:layout_marginTop="75dp"
         android:layout_marginRight="20dp"
         android:text="@string/ok_confirmar_lista_atividades" />
     
     <ListView  android:layout_width="fill_parent"   
			    android:layout_height="150dp"   
			    android:id="@+id/atividadesAddedListView"
			    android:layout_marginTop="130dp">  
     </ListView>
    

</RelativeLayout>
